[project]
name = "fontgeometry"
description = "Font geometry tools"
version = "0.4.1"

readme = "README.md"
license-files = ["LICENSE"]

authors = [{ name = "Jens Kutílek", email = "webmail@kutilek.de" }]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "flake8 >= 7.3.0",
    "ruff >= 0.15.13",
]
# doc = [
#     "sphinx >= 9.1.0",
#     "sphinx_rtd_theme >= 3.1.0",
# ]
test = [
    { include-group = "dev"},
    "pytest >= 9.0.3",
    "pytest-cov >= 7.1.0",
    "tox >= 4.53.0",
    "tox-gh >= 1.7.1",
    "tox-uv >= 1.35.1",
]


[project.urls]
"Homepage" = "https://github.com/jenskutilek/jkFontGeometry"
# "Documentation" = "https://fontgeometry.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/jenskutilek/jkFontGeometry/issues"
"Changelog" = "https://github.com/jenskutilek/jkFontGeometry/blob/master/CHANGELOG.md"


[build-system]
requires = ["uv_build>=0.11.13,<0.12"]
build-backend = "uv_build"


[tool.pylint.main]
py-version = "3.12"
# ignore-paths = ["src/fontgeometry/_version.py"]
# extension-pkg-allow-list = ["pycurl"]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 88


[tool.pytest.ini_options]
# addopts = "--mypy --pylint --black --isort --cov --cov-report=term --cov-report=html --cov-report=xml"
testpaths = ["tests", "src"]    # "src" required for pylint and mypy (whereas cov considers imported files)
cache_dir = "build/tests/pytest_cache"


[tool.ruff.lint.isort]
known-first-party = ["fontgeometry"]


[tool.uv.build-backend]
module-name = "fontgeometry"
