[metadata]
name = jkFontGeometry
version = 0.3
description = Font geometry tools
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jenskutilek/jkFontGeometry
author = Jens Kutilek
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
project_urls = 
    #  Documentation = https://jkfontgeometry.readthedocs.io/en/latest/
    Source = https://github.com/jkFontGeometry/jkUnicode
    Tracker = https://github.com/jkFontGeometry/jkUnicode/issues

[options]
zip_safe = True
package_dir=
    =Lib
packages=find:
platforms = any
# include_package_data = True
install_requires =
    fontTools >= 4.33.3
python_requires = >=3.7
setup_requires =
    mypy
#     setuptools_scm

[options.packages.find]
where=Lib

[bdist_wheel]
universal = 1
