[package]
name = "pyext-fastgeometry"
version = "0.1.0"
edition = "2021"
authors = ["Jens Kutilek <webmail@kutilek.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fastgeometry"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]